deploy: 87274b19695abc291ce68643369bd5785b71be46

--- a/index.html
+++ b/index.html
@@ -83,16 +83,18 @@
 
   <h2 class="mt-8 text-3xl font-bold"></h2>
   <p class="status mt-0 mb-0">Hi 👋, I&#39;m Jorge Niedbalski.</p>
-  <p class="mt-3 mb-3 home-intro"><p>I&rsquo;m a systems engineer, focused on the development, testing and automation
-of Linux based infrastructure.</p>
-<p>Currently, I work as a technical lead for the Backend team at
-<a href="https://calyptia.com">Calyptia Inc</a>, building an observability
-platform on top of <a href="https://fluentbit.io">Fluentbit</a> using C, Golang
+  <p class="mt-3 mb-3 home-intro"><p>I&rsquo;m a passionate systems engineer with expertise in developing, testing, and automating
+Linux-based infrastructure.</p>
+<p>My current role is as a technical lead for the Backend team at <a href="https://calyptia.com">Calyptia Inc</a>,
+where we&rsquo;re building an observability platform on top of <a href="https://fluentbit.io">Fluentbit</a> using C, Golang,
 and cloud native technologies.</p>
-<p>Previously, I worked for <a href="https://canonical.com">Canonical</a>
-as a Senior software engineer and previously
-for <a href="https://linaro.org">Linaro</a> driving the cloud on arm64 team.</p>
-<p>For more info about my resume, read my <a href="https://linkedin.com/jniedbalski">linkedin</a></p>
+<p>Prior to my current position, I had the opportunity to work as a Senior Software Engineer at <a href="https://canonical.com">Canonical</a>,
+where I gained a lot of experience debugging and throubleshooting Linux systems.</p>
+<p>Additionally, I was part of the <a href="https://linaro.org">Linaro</a> team, where I had the
+exciting responsibility of driving the cloud on arm64 initiatives.</p>
+<p>If you&rsquo;re interested in learning more about my professional background,
+please feel free to check out my <a href="https://linkedin.com/jniedbalski">linkedin</a> profile.
+I&rsquo;m always open to connecting with fellow professionals and discussing exciting opportunities.</p>
 </p>
   
   <h3 class="mt-6 mb-4 text-2xl font-bold">Things I&#39;ve written.</h3>
