deploy: 80bbdab9ea213152c9650c967ad44b5ba076d0c2

--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
 <meta name="twitter:description" content=""/>
 
   
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C178BN4JD5"></script>
+<script>
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-C178BN4JD5', { 'anonymize_ip': false });
+}
+</script>
+
   
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
   <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#262d33">
